--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -9316,7 +9316,7 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Handelsbestellungsty
 model.resource.com.liferay.commerce.model.CommercePriceList=Handelspreisliste
 model.resource.com.liferay.commerce.notification=Commerce-Benachrichtigung
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Commerce Benachrichtigungs-Vorlage
-model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order=Handelsbestellung
 model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
 model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
 model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
