--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -9314,7 +9314,7 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Kauppatilaustyyppi
 model.resource.com.liferay.commerce.model.CommercePriceList=Kaupankäyntihinnasto
 model.resource.com.liferay.commerce.notification=Kaupankäynnin Ilmoitus
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Kaupallinen Ilmoitusmalli
-model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order=Kauppatilaus
 model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
 model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
 model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
