--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -1558,7 +1558,7 @@ are-you-sure-you-want-to-deactivate-this-user=确定要停用此用户吗？
 are-you-sure-you-want-to-deactivate-workflow=确定要禁用此工作流吗？
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=确定要删除所有操作及其设置吗？
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=确定要删除所有分配及其设置吗？
-are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=确定要删除所有通知及其设置吗？
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=确定要删除所有计时器及其设置吗？
 are-you-sure-you-want-to-delete-blueprints=确定要删除所选蓝图吗？
 are-you-sure-you-want-to-delete-elements=确定要删除所选元素吗？
@@ -1777,7 +1777,7 @@ article-comments-enabled=启用文章评论
 article-display-style=文章显示风格
 article-id=文章编号
 article-increment-priority-enabled=启用文章增量优先级
-article-is-not-displayable=Article is not displayable. (Automatic Copy)
+article-is-not-displayable=文章无法显示。
 article-or-folder=文章或文件夹
 article-updated-email=邮件的文章已更新
 article-version=文章版本
@@ -3506,7 +3506,7 @@ configure-x=配置{0}
 configured-database=配置态数据库
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=配置访客可以通过提供电子邮件地址结账还是必须登录。
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=配置是否可以在结账期间设置订单要求的交货日期。
-configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=Configures whether the delivery terms checkout step is shown during checkout. (Automatic Copy)
+configures-whether-the-delivery-terms-checkout-step-is-shown-during-checkout=配置在结账期间是否显示交货条款结账步骤。
 configures-whether-the-payment-terms-checkout-step-is-shown-during-checkout=配置是否在结账期间显示付款条款结账步骤。
 configures-whether-the-purchase-order-number-is-shown-or-hidden-in-placed-and-pending-order-details=配置在已下达和待定订单详细信息中显示还是隐藏采购单编号。
 confirm=确认
@@ -4011,7 +4011,7 @@ cp-display-layout-configuration-name=CP 显示布局
 cp-friendly-url-configuration-name=友好 URL
 cp-option-configuration-name=产品选项
 cp-option-facet-portlet-instance-configuration-limit-max-terms=Limit Maximum Terms (Automatic Copy)
-cp-option-facet-portlet-instance-configuration-name=Commerce Product Option Facet (Automatic Copy)
+cp-option-facet-portlet-instance-configuration-name=商务产品选项 Facet
 cp-search-results-display-context=商务产品搜索结果显示上下文
 cp-search-results-display-context-help=提供 Helper 方法来检索搜索结果 portlet 配置。
 cp-specification-option-facet-portlet-instance-configuration-limit-max-terms=限制最大条目数
@@ -4326,7 +4326,7 @@ custom-canonical-url=自定义规范 URL
 custom-color=自定义颜色
 custom-contact-mapping=自定义联系人映射
 custom-control=自定义控件
-custom-control-background-color=Custom Control Background Color (Automatic Copy)
+custom-control-background-color=自定义控件背景颜色
 custom-control-border-color=自定义控件边框颜色
 custom-control-disabled-border-color=自定义控件禁用边框颜色
 custom-control-hover-color=自定义控件悬停颜色
@@ -4633,7 +4633,7 @@ default-value-enabled=默认值（开启）
 default-value-x=默认值 ({0})
 default-values=默认值
 default-view=默认视图
-default-view-must-have-at-least-one-column=Default view must have at least one column. (Automatic Copy)
+default-view-must-have-at-least-one-column=默认视图必须至少有一列。
 default-viewport=默认视口
 default-was-changed=默认值已更改
 default-workflow-for-all-document-types=所有文档类型的默认工作流
@@ -4721,7 +4721,7 @@ delete-live-page=删除在线页面。
 delete-missing-layouts=删除丢失的页面
 delete-missing-layouts-help=如果选择此项，则此站点中在导入LAR文件中不存在的所有页面均被删除。
 delete-missing-layouts-staging-help=如果选择此项，所有在Live环境中却不在Staging环境中显示的页面均被删除。
-delete-notifications=Delete Notifications (Automatic Copy)
+delete-notifications=删除通知
 delete-page=删除页面
 delete-personal-data=删除个人数据
 delete-question=删除问题？
@@ -5344,8 +5344,8 @@ edit-in-google-drive=在 Google 云端硬盘中编辑
 edit-in-google-sheets=在 Google 表格中编辑
 edit-in-google-slides=在 Google 幻灯片中编辑
 edit-in-office365=在 Office 365 中编辑
-edit-in-production=Edit in Production (Automatic Copy)
-edit-in-x=Edit in {0} (Automatic Copy)
+edit-in-production=在生产中编辑
+edit-in-x=在{0}中编辑
 edit-incoming-quantity=编辑传入数量
 edit-inline-text=编辑内嵌文本
 edit-inventory=编辑存货
@@ -7211,7 +7211,7 @@ import-export-center=导入/导出中心
 import-file=导入文件
 import-file-max-size=导入文件最大大小
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=导入文件最大大小不能超过上传请求最大大小的上限
-import-files=Import Files (Automatic Copy)
+import-files=导入文件
 import-fragments=导入片段
 import-from-ldap=从 LDAP 导入
 import-from-ldap-description=如果您想通过OpenSSO成功登录后从LDAP导入用户，请将其设置为True。LDAP设置在LDAP部分正确配置。如果此项为False，将从OpenSSO提供的数据创建用户。
@@ -9316,7 +9316,7 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=商务订单类型
 model.resource.com.liferay.commerce.model.CommercePriceList=商务价格列表
 model.resource.com.liferay.commerce.notification=商务通知
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=商务通知模板
-model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order=商务订单
 model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
 model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
 model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
