--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -9314,7 +9314,7 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=نوع أمر الت
 model.resource.com.liferay.commerce.model.CommercePriceList=قائمة الأسعار التجارية
 model.resource.com.liferay.commerce.notification=إعلام تجاري
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=قالب إعلام تجاري
-model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order=طلب تجاري
 model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
 model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
 model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
