--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -9314,7 +9314,7 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Commerce Order Type 
 model.resource.com.liferay.commerce.model.CommercePriceList=מחירון מסחר
 model.resource.com.liferay.commerce.notification=הודעת מסחר (Automatic Translation)
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=תבנית דיווח על מסחר (Automatic Translation)
-model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order=הזמנת מסחר
 model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
 model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
 model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
