--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -9317,7 +9317,7 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Bestellingtype hande
 model.resource.com.liferay.commerce.model.CommercePriceList=Handelsprijslijst
 model.resource.com.liferay.commerce.notification=Handelsmelding
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Meldingsjabloon winkel
-model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order=Handelsorder
 model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
 model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
 model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
