--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -4721,7 +4721,7 @@ delete-live-page=Excluir página em produção.
 delete-missing-layouts=Excluir Páginas Faltantes
 delete-missing-layouts-help=Se esta opção for escolhida, todas as páginas deste site que não estiverem presentes no arquivo de importação LAR serão excluídas.
 delete-missing-layouts-staging-help=Se esta opção for escolhida, todas as páginas no ambiente Live que não estiverem presentes no ambiente de Staging são excluídas.
-delete-notifications=Delete Notifications (Automatic Copy)
+delete-notifications=Apagar Notificações
 delete-page=Excluir Página
 delete-personal-data=Excluir os dados pessoais
 delete-question=Excluir pergunta?
@@ -9314,7 +9314,7 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Tipo de pedido de co
 model.resource.com.liferay.commerce.model.CommercePriceList=Lista de Preço do Comércio
 model.resource.com.liferay.commerce.notification=Notificação comercial
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Modelo de notificação de comércio
-model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order=Pedido do comércio
 model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
 model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
 model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
