--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -9314,7 +9314,7 @@ model.resource.com.liferay.commerce.model.CommerceOrderType=Typ av handelsorder
 model.resource.com.liferay.commerce.model.CommercePriceList=Handelsprislista
 model.resource.com.liferay.commerce.notification=Handelsavisering
 model.resource.com.liferay.commerce.notification.model.CommerceNotificationTemplate=Handelsaviseringsmall
-model.resource.com.liferay.commerce.order=Commerce Orders (Automatic Copy)
+model.resource.com.liferay.commerce.order=Handelsbeställning
 model.resource.com.liferay.commerce.order.rule=Commerce Order Rules (Automatic Copy)
 model.resource.com.liferay.commerce.order.rule.model.COREntry=Commerce Order Rule (Automatic Copy)
 model.resource.com.liferay.commerce.order.type=Commerce Order Types (Automatic Copy)
